[package]
name = "vmux"
version = "0.1.7"
authors = ["yazgoo"]
description = "Fuzzy Finder in rust!"
documentation = "https://docs.rs/vmux"
homepage = "https://github.com/yazgoo/vmux"
repository = "https://github.com/yazgoo/vmux"
readme  = "README.md"
keywords = ["fuzzy", "menu", "util"]
license = "MIT"
edition = "2018"

[dependencies]
regex = "1"
blockish = "0.0"
skim = "0.10"
termion = "2"
atty = "0.2.14"
rand = "0.8.0" 
baus = "0.2.0" 
nvim-rs = { version = "0.4", features= [ "use_tokio" ] }
parity-tokio-ipc = "0.9"
tokio = "1"
tokio-util = { version = "0.7", features = [ "compat" ] }
dirs = "4.0"
clap = { version = "3.2", features = ["derive"] }
diss = "0.2.8"
futures = "0.3"
