[package]
name = "vmux"
version = "0.1.13"
authors = ["yazgoo"]
description = "Fuzzy Finder in rust!"
documentation = "https://docs.rs/vmux"
homepage = "https://github.com/yazgoo/vmux"
repository = "https://github.com/yazgoo/vmux"
readme  = "README.md"
keywords = ["fuzzy", "menu", "util"]
license = "MIT"
edition = "2018"

[dependencies]
rustyline = "11.0"
rust-embed="6.6"
regex = "1"
blockish = "0.1"
skim = "0.10"
termion = "2"
rand = "0.8.0" 
baus = "0.2.0" 
nvim-rs = { version = "0.4", features= [ "use_tokio" ] }
parity-tokio-ipc = "0.9"
tokio = "1"
tokio-util = { version = "0.7", features = [ "compat" ] }
dirs = "4.0"
clap = { version = "4.2", features = ["derive"] }
diss = "0.2.10"
futures = "0.3"
log = "0.4"
log-derive = "0.4"
fern = "0.6"
